2010-06-29  Kinuko Yasuda  <kinuko@chromium.org>

Reviewed by Jian Li.

        Fix http/tests/local/blob/send-data-blob.html on Windows
        https://bugs.webkit.org/show_bug.cgi?id=41228

        Fix a regression bug in the line-conversion code.
        Rewrite the line-conversion function with simpler functions to
        make it less error prone.

        No new tests as this is for bug fixes.

        * platform/BlobItem.cpp:
        (WebCore::StringBlobItem::convertToCString):
2010-06-29  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Jian Li.

        Fix http/tests/local/blob/send-data-blob.html on Windows
        https://bugs.webkit.org/show_bug.cgi?id=41228

        Fix the cgi code to make it work with cygwin perl.
        Also fix test expectations for Windows.

        * http/tests/resources/post-and-verify-hybrid.cgi:
        * platform/chromium/test_expectations.txt:
        * platform/win/fast/js/global-constructors-expected.txt:


Canonical link: https://commits.webkit.org/53111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62155 268f45cc-cd09-0410-ab3c-d52691b4dbfc